add wrapped values and primitive support to tuple transformer